# realtime-sensor-aggregator

./: CMakeLists.txt  LICENSE  README.md  aggregator.cpp  listener.cpp  protocol.h
